components/nginx-web/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: nginx-space
  labels:
    app: nginx
spec:
  replicas: 2                 
  selector:
    matchLabels:
      app: nginx
  template:                   
    metadata:
      labels:
        app: nginx            
    spec:
      containers:
      - name: nginx-container 
        image: nginx:latest     
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "250m"
            memory: "256Mi"
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
